--- a/src/components/Attend/components/RadioGroup.scss
+++ b/src/components/Attend/components/RadioGroup.scss
@@ -29,7 +29,7 @@
                 
                 @media (max-width: 520px) {
                     padding-top: 1rem;
-                    padding-bottom: 1.75rem;
+                    padding-bottom: 2.5rem;
                     background-size: 35px;
                 }
 
